[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Tourneyket"
version = "0.1.0"
authors = [
    {name = "Shurjo Sakib Masood", email = "mail@shurjo.me"}
]
description = "Easily represent, progress, and visualize Bracket-style Tournaments"
readme = "README.md"


