[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Tourneyket"
version = "0.1.2"
authors = [{name = "Shurjo Sakib Masood", email = "mail@shurjo.me"}]
description = "Easily represent, progress, and visualize Bracket-style Tournaments"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/shoenot/tourneyket"
Issues = "https://github.com/shoenot/tourneyket/issues"

